// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`c-alarm-tag-chip Renders \`c-alarm-tag-chip\` with custom props and slot 1`] = `
<span
  class="v-chip c-alarm-tag-chip v-chip--small theme--light c-alarm-tag-chip--closable"
  style="background-color: rgb(0, 0, 0); border-color: #000;"
  tabindex="0"
>
  <span
    class="v-chip__content"
  >
    <span
      class="white--text"
    >
      <div
        class="default-slot"
      />
    </span>
    <i
      aria-hidden="true"
      class="v-icon cursor-pointer ml-2 v-icon--link material-icons theme--light white--text"
    >
      cancel
    </i>
  </span>
</span>
`;

exports[`c-alarm-tag-chip Renders \`c-alarm-tag-chip\` with default props 1`] = `
<span
  class="v-chip c-alarm-tag-chip v-chip--small theme--light"
  tabindex="0"
>
  <span
    class="v-chip__content"
  >
    <span
      class="white--text"
    />
    <!---->
  </span>
</span>
`;
